syntax = "proto3";
package test;
option go_package = "github.com/Wenchy/tableau/testpb;testpb";

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "options.proto";
import "common.proto";

option (workbook) = "Test.xlsx";

message ItemConf {
  option (worksheet) = "Item";
  map<int32, Row> item_map = 1 [ (key) = "道具ID" ];

  message Row {
    int32 id = 1 [ (caption) = "道具ID" ];
    string name = 2 [ (caption) = "名字" ];
    string desc = 3 [ (caption) = "描述" ];
    int32 icon_id = 4 [ (caption) = "IconID" ];
    repeated Attribute attributes = 5 [ (caption) = "属性" ];
    map<int32, int32> sale_map = 6
        [ (caption) = "售卖选项", (type) = FIELD_TYPE_CELL_MAP ];
    repeated int32 effects = 7
        [ (caption) = "效果列表", (type) = FIELD_TYPE_CELL_LIST ];
    google.protobuf.Timestamp expiry_time = 8 [ (caption) = "过期时间" ];
  }
  message Attribute {
    int32 id = 1 [ (caption) = "ID" ];
    int32 value = 2 [ (caption) = "Value" ];
    repeated Enhancement enhancements = 3 [ (caption) = "强化" ];
    map<int32, Cost> cost_map = 4 [ (key) = "类型" ];
  }
  message Enhancement {
    int32 id = 1 [ (caption) = "ID" ];
    string desc = 2 [ (caption) = "描述" ];
    repeated string tips = 3
        [ (caption) = "提示列表", (type) = FIELD_TYPE_CELL_LIST ];
  }
  message Cost {
    int32 type = 1 [ (caption) = "类型" ];
    int32 count = 2 [ (caption) = "数量" ];
  }
}

message ActivityConf {
  option (worksheet) = "Activity";
  map<int32, Activity> activity_map = 1 [ (key) = "活动ID" ];

  message Activity {
    int32 id = 1 [ (caption) = "活动ID" ];
    map<int32, Chapter> chapter_map = 2 [ (key) = "章ID" ];
  }

  message Chapter {
    int32 id = 1 [ (caption) = "章ID" ];
    string desc = 2 [ (caption) = "章描述" ];
    repeated Section sections = 3 [ (layout) = COMPOSITE_LAYOUT_VERTICAL ];
  }

  message Section {
    // int32 activity_id = 1 [ (caption) = "活动ID" ];
    // int32 chapter_id = 2 [ (caption) = "章ID" ];
    // string chapter_desc = 3 [ (caption) = "章描述" ];
    // int32 section_id = 4 [ (caption) = "节ID" ];
    // string section_desc = 5 [ (caption) = "节描述" ];

    int32 id = 4 [ (caption) = "节ID" ];
    string desc = 5 [ (caption) = "节描述" ];
    repeated Item items = 6 [ (caption) = "奖励" ];
    google.protobuf.Timestamp begin_time = 7 [ (caption) = "开始时间" ];
    google.protobuf.Timestamp end_time = 8 [ (caption) = "结束时间" ];
    google.protobuf.Duration duration = 9 [ (caption) = "持续多久" ];
  }
}